added banner section

--- a/index.html
+++ b/index.html
@@ -4,13 +4,72 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gamer_zone</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Dancing+Script&family=Lato:ital,wght@0,400;0,700;1,400;1,700&family=Open+Sans:wght@400;700;800&family=Work+Sans:wght@400;500;600;700;800&display=swap" rel="stylesheet">
+<script src="https://kit.fontawesome.com/6eef40d364.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <!-- header section start -->
     <header>
-
+        <nav class="nav-container">
+            <div class="logo-container">
+                <img class="logo" src="./images/Frame.png" alt="">
+                <h3 class="logo-title"><span>G</span>amer</h3>
+            </div>
+            <div class="item-container">
+                <ul class="list-item">
+                    <li><a href="">About Us</a></li>
+                    <li><a href="">Developers</a></li>
+                    <button class="btn-nav">
+                        <a href="">Follow Us On</a>
+                        <!-- <span> <i class="fa-brands fa-youtube"></i></span> -->
+                        <span> 
+                            <a href="">
+                                <i class="fa-brands fa-youtube"></i>
+                            </a>
+                        </span>
+                        <span> 
+                            <a href="">
+                                <i class="fa-brands fa-tiktok"></i>
+                            </a>
+                        </span>
+                    </button>
+                </ul>
+            </div>
+        </nav>
     </header>
+    <!-- header section end -->
     <main>
+        <!-- banner section start -->
+        <section style="background-image: url('./images/Group\ 14.png');">
+            <div class="banner-container">
+                <div class="banner-item">
+                    <div class="banner-item-all">
+                        <h3 class="banner-title-one">Play Like The</h3>
+                        <h1 class="banner-title-two">G.O.A.T.</h1>
+                        <p class="banner-description lowercase">1-Click instant play</p>
+                        <p class="banner-description">No Download</p>
+                        <p class="banner-description">1000s of supported online games</p>
+                        <div class="banner-btn">
+                        <button class="btn-pink">Sign In</button>
+                        <button class="btn-skyblue">Go Rogue</button>
+                    </div>
+                    </div>
+                </div>
+                <div class="banner-img">
+                    <img src="./images/Group 18.png" alt="">
+                </div>
+            </div>
+
+        </section>
+        <!-- banner section end -->
+        <!-- online section start -->
+        <section class="online">
+
+        </section>
+        <!-- online section end -->
 
     </main>
     <footer>
