added online games section

--- a/index.html
+++ b/index.html
@@ -67,7 +67,38 @@
         <!-- banner section end -->
         <!-- online section start -->
         <section class="online">
-
+            <div class="online-container">
+                <div class="online-title-container">
+                    <h3 class="online-title">Online Games <span>Funny Videos</span></h3>
+                    <p class="online-description">A Collection of Hilarious Videos to Brighten Your Day</p>
+                </div>
+                <div class="online-card-container">
+                    <div class="online-card-one">
+                        <figure class="online-card-img">
+                            <img src="./images/Rectangle 4.png" alt="">
+                            <figcaption class="online-card-tag">No Download. No Installs. Play <br>games Instantly on Gamer.</figcaption>
+                        </figure>
+                    </div>
+                    <div class="online-card-tow">
+                        <figure class="online-card-img">
+                            <img src="./images/Rectangle 5.png" alt="">
+                            <figcaption class="online-card-tag">Did you score? #unblockedgames <br> #school</figcaption>
+                        </figure>
+                    </div>
+                    <div class="online-card-three">
+                        <figure class="online-card-img">
+                            <img src="./images/Rectangle 7.png" alt="">
+                            <figcaption class="online-card-tag">Breaking game records <br> like OG</figcaption>
+                        </figure>
+                    </div>
+                    <div class="online-card-four">
+                        <figure class="online-card-img">
+                            <img src="./images/Rectangle 6.png" alt="">
+                            <figcaption class="online-card-tag">Busted gaming on school laptop, <br> but you are still lit.</figcaption>
+                        </figure>
+                    </div>
+                </div>
+            </div>
         </section>
         <!-- online section end -->
 
