added games stor section

--- a/index.html
+++ b/index.html
@@ -101,6 +101,57 @@
             </div>
         </section>
         <!-- online section end -->
+        <!-- play games section start -->
+        <section class="play">
+
+        </section>
+        <!-- play games section end -->
+        <!-- games stor section start -->
+        <section class="games">
+            <div class="games-container">
+                <div class="games-container-top">
+                    <div class="games-item">
+                        <img src="./images/Rectangle 11.png" alt="">
+                        <h6>Action Games</h6>
+                    </div>
+                    <div class="games-item">
+                        <img src="./images/Rectangle 12.png" alt="">
+                        <h6>Action Games</h6>
+                    </div>
+                    <div class="games-item">
+                        <img src="./images/Rectangle 13.png" alt="">
+                        <h6>Action Games</h6>
+                    </div>
+                    <div class="games-item">
+                        <img src="./images/Rectangle 14.png" alt="">
+                        <h6>Action Games</h6>
+                    </div>
+                    <div class="games-item">
+                        <img src="./images/Rectangle 15.png" alt="">
+                        <h6>Action Games</h6>
+                    </div>
+                </div>
+                <div class="games-container-bottom">
+                    <div class="games-item">
+                        <img src="./images/Rectangle 16.png" alt="">
+                        <h6>Action Games</h6>
+                    </div>
+                    <div class="games-item">
+                        <img src="./images/Rectangle 17.png" alt="">
+                        <h6>Action Games</h6>
+                    </div>
+                    <div class="games-item">
+                        <img src="./images/Rectangle 18.png" alt="">
+                        <h6>Action Games</h6>
+                    </div>
+                    <div class="games-item">
+                        <img src="./images/Rectangle 19.png" alt="">
+                        <h6>Action Games</h6>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- games stor section end -->
 
     </main>
     <footer>
