added footer section

--- a/index.html
+++ b/index.html
@@ -155,7 +155,36 @@
 
     </main>
     <footer>
+        <section class="footer-bg">
+            <div class="footer-container">
+                <div class="footer-logo">
+                    <img src="./images/Frame.png" alt="">
+                    <h3><span>G</span>ames</h3>
+                </div>
+                <div class="footer-story">
+                    <p>Our Story</p>
+                    <p>Games</p>
+                    <p>Web Games</p>
+                    <p>Careers</p>
+                    <p>Support</p>
+                    <p>My Account</p>
+                </div>
+                <div class="footer-icons">
+                    <ul>
+                        <li><a href=""><i class="fa-brands fa-twitter"></i></a></li>
+                        <li><a href=""><i class="fa-brands fa-facebook"></i></a></li>
+                        <li><a href=""><i class="fa-brands fa-youtube"></i></a></li>
+                        <li><a href=""><i class="fa-brands fa-linkedin-in"></i></a></li>
+                        <li><a href=""><i class="fa-brands fa-instagram"></i></a></li>
+                        <li><a href=""><i class="fa-brands fa-apple"></i></a></li>
+                    </ul>
+                </div>
+                <div class="footer-tarms">
 
+                </div>
+            </div>
+            <p class="copyright">Play Games @ Gamer @ 2000-2023 Gamer Bangladesh</p>
+        </section>
     </footer>
 </body>
 </html>
