--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gamer_zone</title>
+    <link rel="icon" type="" href="./images/favicon.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Dancing+Script&family=Lato:ital,wght@0,400;0,700;1,400;1,700&family=Open+Sans:wght@400;700;800&family=Work+Sans:wght@400;500;600;700;800&display=swap" rel="stylesheet">
@@ -180,7 +181,10 @@
                     </ul>
                 </div>
                 <div class="footer-tarms">
-
+                    <p>Terms and Conditions</p>
+                    <p>Privacy Policy</p>
+                    <p>Cookie Policy</p>
+                    <p>Privacy Settings</p>
                 </div>
             </div>
             <p class="copyright">Play Games @ Gamer @ 2000-2023 Gamer Bangladesh</p>
