added play games section

--- a/index.html
+++ b/index.html
@@ -103,8 +103,17 @@
         </section>
         <!-- online section end -->
         <!-- play games section start -->
-        <section class="play">
-
+        <section class="play-games">
+            <div class="play-games-container">
+                <div class="play-contact-container">
+                    <h3><span>Play Games <br> Online</span> Anywhere,<br> Anytime!</h3>
+                    <p>PC. dad’s phone, mom’s tablet, or your Chromebook,<br> with Gamer you can play your favorite games online <br> for free, any time, anywhere , on any device.</p>
+                </div>
+                <div class="play-container">
+                    <div class="play-inner">
+                    </div>
+                </div>
+            </div>
         </section>
         <!-- play games section end -->
         <!-- games stor section start -->
@@ -155,6 +164,7 @@
         <!-- games stor section end -->
 
     </main>
+    <!-- footer section start -->
     <footer>
         <section class="footer-bg">
             <div class="footer-container">
