--- a/index.html
+++ b/index.html
@@ -25,14 +25,13 @@
                     <li><a href="">Developers</a></li>
                     <button class="btn-nav">
                         <a href="">Follow Us On</a>
-                        <!-- <span> <i class="fa-brands fa-youtube"></i></span> -->
                         <span> 
-                            <a href="">
+                            <a href="https://www.youtube.com/@ProgrammingHero" target="_blank">
                                 <i class="fa-brands fa-youtube"></i>
                             </a>
                         </span>
                         <span> 
-                            <a href="">
+                            <a href="https://www.tiktok.com/" target="_blank">
                                 <i class="fa-brands fa-tiktok"></i>
                             </a>
                         </span>
@@ -44,7 +43,8 @@
     <!-- header section end -->
     <main>
         <!-- banner section start -->
-        <section style="background-image: url('./images/Group\ 14.png');">
+        <section>
+            <!-- style="background-image: url('./images/Group\ 14.png');" -->
             <div class="banner-container">
                 <div class="banner-item">
                     <div class="banner-item-all">
